--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" href="style.css">
 		<title>
 			Daniel Hannons website
 		</title>
@@ -11,6 +12,7 @@
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="https://www.github.com/danielh2942">Github</a></li>
+				<li><a href="https://www.last.fm/user/notdanielhannon">LastFm</a></li>
 			</ul>
 		</div>
 		<div id="main">
